[package]
name = "stackdriver_logger"
version = "0.5.1"
description = "A logger for Google's Stackdriver with a cli-friendly fallback for local development"
authors = ["Kamek <b.kamek@gmail.com>"]
license = "MIT/Apache-2.0"
categories = ["development-tools::debugging"]
keywords = ["log", "logging", "cloud", "google", "stackdriver"]
readme = "README.md"
repository = "https://github.com/kamek-pf/stackdriver-logger/"
edition = "2018"

[features]
default = ["cargo"]
cargo = ["toml"]

[dependencies]
chrono = "0.4"
serde_json = "1.0"
env_logger = "0.6"
log = "0.4"
pretty_env_logger = "0.3"
toml = { version = "0.5", optional = true }
