[package]
name = "stackdriver_logger"
version = "0.7.0"
description = "A logger for Google's Stackdriver with a cli-friendly fallback for local development"
authors = ["Kamek <b.kamek@gmail.com>"]
license = "MIT/Apache-2.0"
categories = ["development-tools::debugging"]
keywords = ["log", "logging", "cloud", "google", "stackdriver"]
readme = "README.md"
repository = "https://github.com/kamek-pf/stackdriver-logger/"
edition = "2018"

[features]
default = ["cargo", "termcolor", "atty", "humantime", "regex", "pretty_env_logger"]
prod = ["cargo"]

# Used by the init macro
cargo = ["toml"]

# Toggle env logger features
termcolor = ["env_logger/termcolor"]
atty = ["env_logger/atty"]
humantime = ["env_logger/humantime"]
regex = ["env_logger/regex"]

# Toggle log features
customfields = ["log/kv_unstable"]

[dependencies]
env_logger = { version = "0.7.1", default-features = false }
pretty_env_logger = { version = "0.4.0", optional = true }
chrono = "0.4.10"
serde_json = "1.0.47"
log = "0.4.8"
toml = { version = "0.5.6", optional = true }
